﻿   __    ____   ___  _   _  ____  _  _  ____  ___  ____    ___  
  /__\  (  _ \ / __)( )_( )(_  _)( \/ )(_  _)/ __)(_  _)  (__ \ 
 /(__)\  )   /( (__  ) _ (  _)(_  \  /  _)(_ \__ \  )(     / _/ 
(__)(__)(_)\_) \___)(_) (_)(____)  \/  (____)(___/ (__)   (____)

===============================================================================
# Archivist Beta 3                                                            #
===============================================================================
- Background loading of cards, deck and libary
- Warning for download image
- Resize of oversized cards
- Search result card count
- Sortable lists
- Card info added to library and deck
- Graph scaling adjusted
- Missing Time Spiral "Timeshifted" cards added
- Fixed mana curve calculation

===============================================================================
# Archivist Beta 2                                                            #
===============================================================================
- Sideboard
- Deck closing and saving
- Deck parser optimised
- Mana symbols analysis
- Draw simulator
- Freetext type search
- Print proxy list
- Print deck list

===============================================================================
# Archivist Beta 1                                                            #
===============================================================================
Initial release
- Card search
- Library
- Deck manager
- Gatherer Update
- Deck analysis